# si4ti

./: .clang-format  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  build-segyio.sh  build-si4ti.sh  conf.py  imp-segmented-dsyn-0-ref.sgy  imp-segmented-dsyn-1-ref.sgy  imp-segmented-dsyn-2-ref.sgy  imp-segmented-relAI-0-ref.sgy  imp-segmented-relAI-1-ref.sgy  imp-tinw-dsyn-0-ref.sgy  imp-tinw-relAI-1-ref.sgy  imp-tinw-relAI-2-ref.sgy  imp-tvw-dsyn-1-ref.sgy  imp-tvw-relAI-2-ref.sgy  index.rst  pyproject.toml  setup.py  shifted-ref.sgy  timeshift-0-ref.sgy  timeshift-1-ref.sgy  timeshifted-ref.sgy  ts-4Dcorr-0-ref.sgy  ts-4Dcorr-1-ref.sgy  ts-cumulative-1-ref.sgy  vint0.sgy  vint2.sgy
.github/workflows/: build_and_test.yml  build_and_test_python_bindings.yml  build_wheels.yml  code_checks.yml  publish.yml  style_checks.yml
cmake/: CommonConfiguration.cmake  FindImpedanceDependencies.cmake  FindTimeshiftDependencies.cmake
cppcheck/: suppressions.txt
deploy/: build_executables.sh
doc/: CMakeLists.txt  conf.py  implementation.rst  index.rst  theory.rst
impedance/: CMakeLists.txt
impedance/src/: impedance.cpp  impedance.hpp
impedance/test/: impedance.cpp  matrixes.hpp
python/: CMakeLists.txt  README.md  pyproject.toml
python/src/: main.cpp  python_bindings.cpp  python_interface.cpp
python/src/si4ti/: __init__.py  _version.py
python/tests/: test_impedance.py
simpli/timeshift/: __init__.py  bspline.cpp  main.py  ts.cpp  utils.py
test-data/: imp-segmented-relAI-2-ref.sgy  imp-tinw-dsyn-1-ref.sgy  imp-tinw-dsyn-2-ref.sgy  imp-tinw-relAI-0-ref.sgy  imp-tvw-dsyn-0-ref.sgy  imp-tvw-dsyn-2-ref.sgy  imp-tvw-relAI-0-ref.sgy  imp-tvw-relAI-1-ref.sgy  ts-cust_norm-0-ref.sgy  ts-cust_norm-1-ref.sgy  vint1.sgy
tests/: utils.py
timeshift/: CMakeLists.txt  diff.py
timeshift/src/: apply_timeshift.cpp  linalg.hpp  timeshift.cpp  timeshift.hpp
timeshift/test/: matchers.hpp  matrices.hpp  timeshift.cpp  vintage1.sgy  vintage2.sgy  vintage3.sgy
travis/: Dockerfile  make-release.sh
